# mil-sh

./: CMakeLists.txt  CMakePresets.json  README.md
src/: command.h  lexer.c  lexer.h  main.c  parser.c  parser.h  utils.h
